@@ -9,6 +9,13 @@ update-manager (1:0.87.13) hardy; urgency=low
     - add "ksplash-engine-moodin" to ForcedObsoletes
   * DistUpgrade/removal_blacklist.cfg:
     - add "^postgresql-.*"to the removal blacklist
+  * DistUpgrade/DistUpgradeViewText.py:
+    - flush() output in updateStatus()
+  * DistUpgrade/DistUpgradeCache.py:
+    - fix bug that prevented proper error message on 
+      upgrade calculation error in the text frontend
+    - show the demoted packages in a more readable
+      manner
 
  --
 
